--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -4,13 +4,15 @@ En esta sección del trabajo se explican y definen los conceptos básicos en rel
 
 \subsection{Bronquiolitis, Insuficiencia Respiratoria Aguda y Oxigenoterapia de Alto Flujo}
 
-La bronquiolitis (BR), es una infección de las vías respiratorias inferiores causada principalmente por el virus respiratorio sincitial (VRS) y puede convertirse en una enfermedad muy grave. En el 10 \% de los casos es necesaria la hospitalización, y hasta el 23,8 \% de estos pacientes necesitan cuidados críticos por insuficiencia respiratoria o episodios de apnea. Aunque la BR puede diagnosticarse en adultos y ancianos, son los lactantes, sobre todo los más pequeños, los sujetos más afectados por la enfermedad (\cite{Fainardi2021}). La dificultad respiratoria que caracteriza y condiciona la gravedad del cuadro, alcanza su máxima expresividad transcurridos los primeros 3-5 días de evolución de la enfermedad, y es la causa principal de ingreso hospitalario (\cite{Patel2003}).
+La bronquiolitis (BR), es una infección de las vías respiratorias inferiores causada principalmente por el virus respiratorio sincitial (VRS) y puede convertirse en una enfermedad muy grave, a su vez es una patología de las más frecuentes en pediatría que supone un porcentaje importante de ingresos, ingresos en UCIP, morbilidad y mortalidad infantil. En el 10 \% de los casos es necesaria la hospitalización, y hasta el 23,8 \% de estos pacientes necesitan cuidados críticos por insuficiencia respiratoria o episodios de apnea. Aunque la BR puede diagnosticarse en adultos y ancianos, son los lactantes, sobre todo los más pequeños, los sujetos más afectados por la enfermedad (\cite{Fainardi2021}). La dificultad respiratoria que caracteriza y condiciona la gravedad del cuadro, alcanza su máxima expresividad transcurridos los primeros 3-5 días de evolución de la enfermedad, y es la causa principal de ingreso hospitalario (\cite{Patel2003}).
 
 La bronquiolitis afecta principalmente al tracto respiratorio inferior y es la patología más común en niños menores de 2 años de edad siendo la principal causa de ingreso hospitalario en lactantes menores de 1 año de edad. El pilar de tratamiento de bronquiolitis a día de hoy se basa en la atención de apoyo, incluyendo la alimentación, la hidratación y el apoyo respiratorio desde administración estándar de oxígeno a la ventilación invasiva (\cite{Daverio2019}).
 
 Una de las posibles complicaciones graves derivadas del cuadro bronquiolítico es la insuficiencia respiratoria aguda (IRA). Esta se define como la incapacidad del sistema respiratorio de cumplir su función básica, que es el intercambio gaseoso de oxígeno y dióxido de carbono entre el aire ambiental y la sangre circulante, ésta debe realizarse en forma eficaz y adecuada a las necesidades metabólicas del organismo, teniendo en cuenta la edad, los antecedentes y la altitud en que se encuentra el paciente (\cite{FernandoR2010}). 
 
 Es importante destacar que no todos los casos de bronquiolitis conducen a insuficiencia respiratoria aguda. La mayoría de los niños con bronquiolitis presentan síntomas leves a moderados y se recuperan sin complicaciones graves. 
+
+La bronquiolitis a día de hoy es una enfermedad impredecible, que puede ser desde tratado a nivel ambulatorio como precisar ingreso en planta, los pacientes que sufren un empeoramiento se les suele suministrar si se dispone Oxigenación de Alto Flujo y un porcentaje que no consiguen remontar se ingresan en la Unidad de Cuidados Intensivos Pediátricos (UCIP) dónde generalmente se aplican otras terapias de soporte respiratorio. 
 
 La Oxigenación por Cánula Nasal de Alto Flujo, también conocida como: Oxigenación de Alto Flujo (OAF); es una técnica de soporte respiratorio no invasiva que se ha utilizado en niños con bronquiolitis aguda en unidades de cuidados intensivos (UCI), cuidados neonatales y plantas pediátricas. Una bronquilitis es considerada aguda cuando supone una insuficiencia respiratoria. La OAF pues consituye una práctica terapéutica de primera línea en el manejo de pacientes con IRA. La OAF es una técnica que proporciona un flujo de gas humidificado y calentado a través de una cánula nasal a una velocidad superior a la ventilación espontánea del paciente. Esto puede mejorar la eliminación de secreciones, disminuir la inflamación de las vías respiratorias y reducir el gasto energético del paciente. En comparación con el oxígeno estándar, que es frío y seco, la terapia de oxígeno calentado y humidificado puede ser más beneficiosa para los pacientes con insuficiencia respiratoria aguda (\cite{Daverio2019}).
 
@@ -33,6 +35,17 @@ Existen pocos estudios publicados sobre la utilidad y eficacia de los sistemas d
 Es un hecho que la monitorización cardiorrespiratoria es una parte fundamental de la hospitalización pediátrica. Esta consiste en la interpretación de la información emitida por los sistemas de vigilancia que miden las constantes vitales de los pacientes. El nivel de gravedad del paciente indicará el tipo de monitorización que precisa en cada momento; en pacientes con inestabilidad respiratoria está indicada la monitorización cardiorrespiratoria continua en las plantas de hospitalización (\cite{AmandaC}).
 
 En el presente estudio se van a trabajar con datos referentes a Saturación de Oxígeno (SpO2), Frecuencia Cardiaca (FC) y Frecuencia Respiratoria (FR). La SpO2 es un parámetro que indica expresa la cantidad de oxígeno que se combina, en el sentido químico, con la hemoglobina para formar la oxihemoglobina, que es quien transporta el oxígeno en sangre hacia los tejidos (\cite{Laborde2004}). La FC es el número de veces que el corazón late en un minuto. La FR es el número de veces que se respira en un minuto. Estos parámetros son los que se van a utilizar en relación a la monitorización cardiorespiratoria para determinar la gravedad de la bronquiolitis y predecir la evolución de la misma.
+
+\subsection{Monitorización Continua de Variables Fisiológicas}
+
+La monitorización es un aspecto fundamental de la hospitalización pediátrica y consiste en la interpretación de la información que nos emiten diversos sistemas de vigilancia que miden las constantes vitales de los pacientes. El desarrollo de la tecnología ha conseguido mejorar la monitorización centralizada, que permite al personal sanitario obtener información continua de varios pacientes al mismo tiempo y de forma remota.
+
+Las variables fisiológicas que se van a considerar en este estudio son: 
+
+\textbf{Frecuencia cardíaca (FC):} Se puede obtener de forma aislada (manual o automática) o de forma continua mediante el monitor ECG que nos proporcionara el valor numérico (FC) o las ondas de ECG. Se debe comprobar mediante la palpación del pulso o la auscultación cardiaca al menos una vez por turno y siempre que haya preocupación por el estado clínico del niño, un cambio en el ritmo cardíaco o cuando haya dudas sobre la precisión de la tecnología. Puede variar en función de la edad, actividad física, patología (fiebre), etc. 
+
+\textbf{Saturación de O2 y suministro de oxígeno:} La saturación se mide mediante el pulsioxímetro, que determina el porcentaje de saturación de oxígeno de la hemoglobina arterial con ayuda de métodos fotoeléctricos. Se realiza mediante un dispositivo con dos diodos, colocado normalmente en la zona distal de un dedo. Es necesaria la presencia de pulso arterial para reconocer la señal. Además, se debe registrar al flujo de la administración de oxígeno (L/min) o el porcentaje de oxígeno que recibe el paciente.  Se debe registrar el dispositivo utilizado para suministrar oxígeno: gafas nasales, oxígeno seco o humidificado, mascarilla simple, mascarilla con reservorio, oxigenoterapia de alto flujo, etc. 
+
 
 \subsection{Aprendizaje Automático en el Ámbito de la Salud}
 
