--- a/lib/chapter2.tex
+++ b/lib/chapter2.tex
@@ -8,6 +8,8 @@ El presente Trabajo de Fin de Máster parte de la necesidad de que actualmente l
 
 Se buscará a partir de los datos extraídos de 79 pacientes ingresados en el Hospital Universitario Gregorio Marañón, un modelo que permita predecir la evolución de la bronquiolitis en los pacientes ingresados en el servicio de pediatría y determinar si es posible adelantarse a la evolución de la enfermedad y a la aplicación de oxigenación de alto flujo (OAF) así como el ingreso en UCIP (Unidad de cuidados intensivos Pediátrica).
 
+Se buscará describir que parámetros son los más relevantes para la predicción de la evolución de la bronquiolitis y si la monitorización continua de la frecuencia cardíaca y la saturación de oxígeno aportan información relevante para la predicción de la evolución de la bronquiolitis.
+
 \subsection{Objetivos Específicos}
 
 Se establecen los siguientes objetivos específicos para conseguir el objetivo general comentado anteriormente:
