--- a/lib/chapter5-FCC.tex
+++ b/lib/chapter5-FCC.tex
@@ -32,7 +32,7 @@
 \begin{figure}[H]
     \centering
     \includegraphics[scale = 0.8]{img/06-4-ccf.png}
-    \caption{Dendograma Plot k = 2 usando FCC}
+    \caption{Dendograma plot usando FCC}
     \label{fig:ccf_ctg}
 \end{figure}
 
@@ -97,7 +97,7 @@ Confusion matrix:
 \begin{figure}[H]
     \centering
     \includegraphics[scale = 0.8]{img/06-5-ccf.png}
-    \caption{Dendograma Plot k = 2 utilizando FACC}
+    \caption{Importancia utilizando FACC}
     \label{fig:ccf_imp}
 \end{figure}
 
@@ -106,6 +106,6 @@ Confusion matrix:
 \begin{figure}[H]
     \centering
     \includegraphics[scale = 0.8]{img/06-6-ccf.png}
-    \caption{Dendograma Plot k = 2 utilizando FACC}
+    \caption{Valores de FCC por cluster k = 2 }
     \label{fig:ccf_cls}
 \end{figure}
