--- a/lib/chapter6.tex
+++ b/lib/chapter6.tex
@@ -18,7 +18,13 @@ En último lugar se ha concluido que el uso de la técnica de \textit{Random For
 
 El modelo programado que evalúa al paciente pediátrico pasadas las 8 primeras horas es robusto y es capaz de clasificar si el paciente va a necesitar OAF o no con una precisión validada en un conjunto de datos de testeo del 96\% y con un OOB del 4.35\%. Se justifica el uso de este modelo frente a un modelo de regresión logística dado el mejor resultado obtenido a la hora de la clasificación de los pacientes.
 
-Las escalas de valoración al ingreso así como la decisión de suministrar Suero, hacer una Radiografía y tomar una analítica son las variables más importantes a la hora de clasificar al paciente. Es decir el modelo identifica que los pacientes que más riesgo tienen son aquellos que al ingreso los profesionales de la salud hacen una previa valoración de riesgo y deciden suministrar Suero, hacer una Radiografía y tomar una analítica.
+Las escalas de valoración al ingreso así como la decisión de suministrar Suero, hacer una Radiografía y tomar una analítica son las variables más importantes a la hora de clasificar al paciente. Es decir el modelo identifica que los pacientes que más riesgo tienen son aquellos que al ingreso los profesionales de la salud hacen una previa valoración de riesgo y deciden suministrar Suero, hacer una Radiografía y tomar una analítica. En el presente estudio a la hora de clasificar los pacientes no se ha detectado que los valores de monitorización sean los más importantes a la hora de clasificar al paciente, si no que son las decisiones tomadas por los profesionales de la salud a la hora del ingreso del paciente son las que más influyen en la clasificación del paciente.
+
+Un aspecto interesante dentro de la presencia en la importancia dentro del modelo de clasificación, de una variable que no sea descriptiva, es la presencia de valores de la función de correlación cruzada entre la posición 54 y 68 entre los valores de series temporales de monitorización. Esto puede hacer referencia a que en una hora (60 minutos, 60 posiciones) es posible correlacionar la Frecuencia Cardíaca con la Saturación de Oxígeno de tal manera que indiquen la posible evolución del paciente en las siguientes horas. A su vez esta relación se sigue manteniendo cuando se pretende clasificar en función de los clusters generados en la Figura~\ref{fig:ccf_imp}. Esto puede indicar que los valores de Frecuencia Cardíaca con respecto a la saturación de oxígeno desfasados 1h son un buen indicador de la evolución y las características de los pacientes.
+
+No se descarta que la monitorización sea un método eficaz pues a pesar de que la importancia de las variables se agrupa entorno a las variables descriptivas la clasificación y el resultado de un modelo robusto de predicción se realiza también en función de los valores de monitorización.  
+
+Esto indica que el modelo es capaz de identificar que los valores de monitorización de los pacientes que necesitan OAF son más estables que los de los pacientes que no necesitan OAF.
 
 
 
