--- a/lib/chapter5.tex
+++ b/lib/chapter5.tex
@@ -147,15 +147,17 @@ La única media significativa menor que $\alpha = 0.05$ es la monitorizada en la
 En esta sección de resultados, presentaremos los hallazgos obtenidos en el \textit{Estudio 2}. La sección se subdivide en cuatro subsecciones, y en cada una de ellas se mostrarán los siguientes resultados:
 
 \begin{enumerate}
-    \item Dendrograma de los clústeres obtenidos.
-    \item Distribución de los clústeres obtenidos en función de las dos primeras componentes principales.
-    \item Puntuación de Silhouette de los clústeres obtenidos.
-    \item Dendrograma de los clústeres obtenidos según los pacientes que han experimentado OAF, junto con la tabla de contingencia.
-    \item Clasificación mediante Random Forest de los clústeres según las variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final}, así como la Importancia de las cinco primeras variables.
-    \item Clasificación Discriminante mediante Random Forest de los clústeres en función de los datos utilizados para generar los mismos clústeres (Raw Data, FAC, Peridiograma y FACC). Se mostrará la importancia para identificar qué datos contribuyen más en la clasificación entre los clústeres obtenidos.
+    \item Dendrograma de los clústeres obtenidos según la mejor agrupación determinada.
+    \item Distribución de los clústeres obtenidos en función de las dos primeras componentes principales según la mejor agrupación determinada.
+    \item Puntuación de Silhouette de los clústeres obtenidos según la mejor agrupación determinada.
+    \item Dendrograma de los clústeres obtenidos según los pacientes que han experimentado OAF, junto con la tabla de contingencia para dos grupos de pacientes.
+    \item Clasificación mediante Random Forest de los clústeres según las variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final}, así como la Importancia de las cinco primeras variables para dos grupos de pacientes.
+    \item Clasificación Discriminante mediante Random Forest de los clústeres en función de los datos utilizados para generar los mismos clústeres (Raw Data, FAC, Peridiograma y FACC). Se mostrará la importancia para identificar qué datos contribuyen más en la clasificación entre k = 2 clústers generados.
     \item Distribución de la importancia del resultado del modelo del apartado anterior de los valores empleados (Raw Data, FAC, Peridiograma y FACC) 
-    \item Cálculo de las medias de todos los valores empleados (Raw Data, FAC, Peridiograma y FACC) entre todos los pacientes, y diagrama de sus valores por clústeres.
+    \item Cálculo de las medias de todos los valores empleados (Raw Data, FAC, Peridiograma y FACC) entre todos los pacientes, y diagrama de sus valores entre k = 2 clústers generados.
 \end{enumerate}
+
+Se estudiará la mejor forma de distribuir a los pacientes entre clusters pero se tendrá en cuenta que al pretender dividir la muestra de pacientes entre aquellos a los que se les suministra  OAF y los que no se forzará para su clasificación y visualización a 2 clusters.
 
 \paragraph{Leyenda de los gráficos}
 
