--- a/lib/zanexo3.tex
+++ b/lib/zanexo3.tex
@@ -71,4 +71,8 @@ for (i in c(1:dim(cluster_study)[1])) {
 }}
 
 formattable(rand_index_table, list(area(col = ACF_SatO2:PER_c_HR) ~ color_tile("transparent", "lightblue")))
-  \end{lstlisting}
+\end{lstlisting}
+
+
+\paragraph{Código para el modelo final}
+\textbf{FINAL MODEL CODE:} \url{https://rpubs.com/garisj98/1077280}
