--- a/lib/chapter7.tex
+++ b/lib/chapter7.tex
@@ -177,7 +177,14 @@ En la Figura~\ref{fig:gantt} se muestra el diagrama de Gantt con las tareas a re
 
 Considerando que el proyecto ha durado un año y se han invertido una media de $15$ horas semanales el textbf{Total de Horas Dedicadas} son unas $783$ horas. 
 
+\subsubsection{Enlaces GitHub}
 
+A continuación se facilitan los enlaces GitHub de todo el código generado: 
+
+\begin{itemize}
+    \item \textbf{Código R:} \url{https://github.com/ArisMei/TFM-Gonzalo-Aris} (Private)
+    \item \textbf{Código \LaTeX:} \url{https://github.com/ArisMei/MaserThesisDoc} (Public)
+\end{itemize}
 
 \subsection{Presupuesto}\label{sec:presupuesto}
 
