--- a/lib/zanexo1.tex
+++ b/lib/zanexo1.tex
@@ -1,4 +1,4 @@
-\section{Primer Anexo}\label{sec:anexo1}
+\section{PRIMER ANEXO}\label{sec:anexo1}
 
 \subsection{Visualización de los datos}\label{sec:codigo-visualizacion}
 \lstset{style=mystyle2} 
