--- a/lib/zanexo2.tex
+++ b/lib/zanexo2.tex
@@ -1,4 +1,4 @@
-\subsection{Segundo Anexo}~\label{sec:anexo2}
+\subsection{SEGUNDO ANEXO}~\label{sec:anexo2}
 
 \subsubsection{Cálculo de Medias Horarias}~\label{sec:calculo-medias-horarias}
 Se muestra en este Anexo el código que permite calcular la media por hora y analice la cantidad de valores faltantes y la cantidad de valores registrados en esta hora. Esta función permitirá observar varias cosas importantes para cada paciente:
