--- a/lib/zanexo3.tex
+++ b/lib/zanexo3.tex
@@ -1,4 +1,4 @@
-\subsection{Tercer Anexo}~\label{sec:anexo3}
+\subsection{TERCER ANEXO}~\label{sec:anexo3}
 
 \subsubsection{Código para Resultados Estudio 2}
 
