--- a/lib/zanexo1.tex
+++ b/lib/zanexo1.tex
@@ -1,6 +1,6 @@
-\section{PRIMER ANEXO}\label{sec:anexo1}
+\subsection{PRIMER ANEXO}\label{sec:anexo1}
 
-\subsection{Visualización de los datos}\label{sec:codigo-visualizacion}
+\subsubsection{Visualización de los datos}\label{sec:codigo-visualizacion}
 \lstset{style=mystyle2} 
 \begin{lstlisting}[style=mystyle2,caption={Código Visualización de los Datos}, label={lst:codigo-visualizacion}]
   ---
@@ -278,9 +278,9 @@
 
 \lstset{style=mystyle} 
 
-\subsection{Inputación con Distancia de Gower}\label{sec:codigo-input-gower}
+\subsubsection{Inputación con Distancia de Gower}\label{sec:codigo-input-gower}
 
-\subsubsection{Función Imputación por el Método de Gower: Input\_Gower}\label{sec:codigo-input-gower-fun}
+\paragraph{Función Imputación por el Método de Gower: Input\_Gower}\label{sec:codigo-input-gower-fun}
 
 
 \begin{lstlisting}[style=mystyle,caption={Input\_Gower.R}, label={lst:input-gower-fun}]
@@ -362,7 +362,7 @@
 
 \newpage
 
-\subsubsection{Función de preprocesamiento: data\_imputation\_Gower}\label{sec:codigo-input-gower-fun-preprocesamiento}
+\paragraph{Función de preprocesamiento: data\_imputation\_Gower}\label{sec:codigo-input-gower-fun-preprocesamiento}
 
 \begin{lstlisting}[style=mystyle,caption={data\_imputation\_Gower.R}, label={lst:input-gower-fun-preprocesamiento}]
   data_imputation_Gower <- function(df_merge_imputation, n_primeros) {
