Updates from Overleaf

--- a/lib/chapter5-FAC.tex
+++ b/lib/chapter5-FAC.tex
@@ -72,7 +72,7 @@
     \caption{Dendograma Plot k = 2 usando FAC de \textit{SpO2} y \textit{SpO2\_scaled}}\label{fig:acf_ctg_spo2}
 \end{figure}
 
-\paragraph{Clasificación mediente Random Forest de los clústeres generados con los datos de Peridiograma según las variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} para FAC}
+\paragraph{Clasificación mediente Random Forest de los clústeres generados con los datos de {\color{blue}Periodograma} según las variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final} para FAC}
 
 \begin{figure}[H]
     \centering
@@ -243,7 +243,7 @@ Confusion matrix:
 \end{table}
 
 
-\paragraph{Clasificación mediente Random Forest de los clústeres según FAC utilizada para genear los mismos} 
+\paragraph{Clasificación {\color{blue}mediante} Random Forest de los clústeres según FAC utilizada para {\color{blue}generar} los mismos} 
 
 \begin{figure}[H]
     \centering
