--- a/lib/chapter5-Raw-data.tex
+++ b/lib/chapter5-Raw-data.tex
@@ -243,7 +243,7 @@ Confusion matrix:
 \end{table}
 
 
-\paragraph{Clasificación mediente Random Forest de los clústeres según Raw Data utilizada para genear los mismos} 
+\paragraph{Clasificación {\color{blue}mediante} Random Forest de los clústeres según Raw Data utilizada para {\color{blue}generar} los mismos} 
 
 \begin{figure}[H]
     \centering
