--- a/lib/chapter5.tex
+++ b/lib/chapter5.tex
@@ -2,7 +2,7 @@
 
 \subsection{Estructura de los Resultados}\label{sec:results}
 
-En este capítulo se presentan los resultados de la investigación mostrada en Metodología~\ref{cap:metodologia}. Se ha dividido en dos partes, la primera muestra los resultados del Estudio 1 y la segunda los resultados del Estudio 2.
+En este capítulo se presentan los resultados de la investigación mostrada en Metodología~\ref{cap:methodology}{color{red} Ojo que no sale la referencia cruzada. Lo he corregido}. Se ha dividido en dos partes, la primera muestra los resultados del Estudio 1 y la segunda los resultados del Estudio 2.
 
 \subsection{Resultados del Estudio 1}\label{sec:resultados-estudio-1}
 
@@ -152,12 +152,12 @@ En esta sección de resultados, presentaremos los hallazgos obtenidos en el \tex
     \item Puntuación de Silhouette de los clústeres obtenidos según la mejor agrupación determinada.
     \item Dendrograma de los clústeres obtenidos según los pacientes que han experimentado OAF, junto con la tabla de contingencia para dos grupos de pacientes.
     \item Clasificación mediante Random Forest de los clústeres según las variables \textit{Cuantitativas} y \textit{Cualitativas} de la Tabla~\ref{tabla:variables_estudio_final}, así como la Importancia de las cinco primeras variables para dos grupos de pacientes.
-    \item Clasificación Discriminante mediante Random Forest de los clústeres en función de los datos utilizados para generar los mismos clústeres (Raw Data, FAC, Peridiograma y FACC). Se mostrará la importancia para identificar qué datos contribuyen más en la clasificación entre k = 2 clústers generados.
-    \item Distribución de la importancia del resultado del modelo del apartado anterior de los valores empleados (Raw Data, FAC, Peridiograma y FACC) 
-    \item Cálculo de las medias de todos los valores empleados (Raw Data, FAC, Peridiograma y FACC) entre todos los pacientes, y diagrama de sus valores entre k = 2 clústers generados.
+    \item Clasificación Discriminante mediante Random Forest de los clústeres en función de los datos utilizados para generar los mismos clústeres (Raw Data, FAC, {\color{blue}Periodograma} y FACC). Se mostrará la importancia para identificar qué datos contribuyen más en la clasificación entre k = 2 clústers generados.
+    \item Distribución de la importancia del resultado del modelo del apartado anterior de los valores empleados (Raw Data, FAC, {\color{blue}Periodograma} y FACC) 
+    \item Cálculo de las medias de todos los valores empleados (Raw Data, FAC, {\color{blue}Periodograma} y FACC) entre todos los pacientes, y diagrama de sus valores entre k = 2 clústers generados.
 \end{enumerate}
 
-Se estudiará la mejor forma de distribuir a los pacientes entre clusters pero se tendrá en cuenta que al pretender dividir la muestra de pacientes entre aquellos a los que se les suministra  OAF y los que no se forzará para su clasificación y visualización a 2 clusters.
+Se estudiará la mejor forma de distribuir a los pacientes entre clusters pero se tendrá en cuenta que al pretender dividir la muestra de pacientes entre aquellos a los que se les suministra  OAF y los que no{\color{blue},} {\color{red} esta coma es importante} se forzará para su clasificación y visualización a 2 clusters.
 
 \paragraph{Leyenda de los gráficos}
 
